# HoarderMCP

./: .dockerignore  .env.example  .windsurfrules  Dockerfile  PLANNING.MD  README-DEPLOYMENT.md  README.md  TASK.MD  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  start.sh  stop.sh
hoardermcp/: __init__.py  main.py
hoardermcp/api/: __init__.py  server.py
hoardermcp/core/: __init__.py  chunking.py  ingest.py  vector_store.py
hoardermcp/crawler/: __init__.py  crawler.py  extractors.py  sitemap.py  sitemap_crawler.py
hoardermcp/models/: __init__.py  document.py  ingest.py  vector.py
hoardermcp/storage/: __init__.py  base.py  milvus_store.py
tests/: conftest.py  test_chunking.py
tests/unit/crawler/: test_sitemap_crawler.py
